fixed #8100 - search box layout issues in the new theme

--- a/tabby-terminal/src/components/searchPanel.component.scss
+++ b/tabby-terminal/src/components/searchPanel.component.scss
@@ -21,3 +21,7 @@
     font-size: 0.7rem;
     opacity: .5;
 }
+
+svg {
+    height: 16px;
+}
